---------------------------------------------------------------------------------------------------
Version: 1.5.3
Date: 19/1/26
  Features:
    - Added 3 new quests.
    - Added Hexadic Resonators (six different power levels) to dungeon chests.
  Changes:
    - Item buff enhancement (upgrading) is now gated behind the new "Cracking the Vault" quest.
    - "Enhance All" feature for item buffs is now gated behind the new "Lockbreaker" quest.
    - Dungeon chests contain fewer but more valuable items (overall better).
---------------------------------------------------------------------------------------------------
Version: 1.5.2
Date: 19/1/26
  Major Features:
    - Added tough strongboxes in random hexes on all planets, giving loot on each successful breaking.
  Features:
    - Added item buffs: all vanilla chest types (8 new buffs).
  Changes:
    - Modified mod description to list strongboxes as a notable, interesting feature: "scaling DPS boss fights".
  Graphics:
    - Added image for hexa module technology, courtesy Steb GlitchyFishy.
  Gui:
    - Closing the item buffs GUI now brings you back to the catalog GUI.
  Bugfixes:
    - Fixed train trading crashes when coins are involved.
    - Fixed that the command /add-coins was crashing the game when not given a coin amount.
---------------------------------------------------------------------------------------------------
Version: 1.5.1
Date: 17/1/26
  Bugfixes:
    - Fixed migrations from saves all the way back from 0.4.2 to 1.5.x.
    - Removed the text with missing localization in the item buffs GUI.
    - Fixed that repeatedly toggling "All Buffs Level" item buffs was repeatedly adding all other effects instead of adding and removing them.
---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 17/1/26
  Major Features: