@@ -103,6 +103,7 @@ crystalline-fuel=Crystalline fuel
 magmatic-ammo=Magmatic ammo
 plague-rocket=Plague rocket
 electromagnetic-penetrator=Electromagnetic penetrator
+sovr-enrichment-process=SOVR Enrichment Process
 
 [technology-description]
 hexic-logistics=The most impressive belt system.
@@ -116,6 +117,7 @@ energized-thruster-fuel=Give your spaceships the zoomies.
 magmatic-ammo=Melting the face off of anything.
 plague-rocket=It's not a war crime if it isn't a war.
 electromagnetic-penetrator=Similar to a kinetic penetrator, but uses advanced EM technology.
+sovr-enrichment-process=Make use of advanced resonance technology to catalyze [img=item.hexaprism] and organic matter into [img=item.hexadic-resonator-tier-1].
 
 [recipe-name]
 energized-thruster-fuel=Energized thruster fuel
@@ -124,7 +126,7 @@ casting-firearm-magazine=Casting firearm magazine
 casting-piercing-rounds-magazine=Casting piercing rounds magazine
 electromagnetic-penetrator=Electromagnetic penetrator
 electromagnetic-penetrator-cell=Electromagnetic penetrator cell
-sovr-enrichment-process=SOVR Enrichment Process
+sovr-enrichment-process=SOVR Enrichment Process (__1__)
 
 [ammo-category-name]
 electromagnetic-penetrator=Electromagnetic penetrator
