@@ -97,3 +97,6 @@ regenerate-trades=Completely randomize the trades in all hex cores.
 
 [hextorio-debug]
 complete-quest=Complete quest
+
+[recipe-description-extra]
+productivity-only-affects=Productivity only affects the last output.
